--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ fastlane/screenshots/**/*.png
 fastlane/test_output
 .DS_Store
 FirstCourseFinalTask/FirstCourseFinalTask.xcodeproj/project.xcworkspace
+FirstCourseFinalTask/FirstCourseFinalTask.xcodeproj
